<resources>
    <string name="app_name">AdminApp</string>

    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="app_logo_description">Yoga Admin App</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="class_types">
        <item>Flow Yoga</item>
        <item>Aerial Yoga</item>
        <item>Family Yoga</item>
    </string-array>
</resources>