<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white"
    android:gravity="center">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/yoga"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo_description" />

    <!-- Title -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:gravity="center" />

    <!-- Email Input -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primaryColor"
        android:padding="12dp"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>